--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,16 @@ dependencies:
   # Spinkit
   flutter_spinkit: ^4.1.2+1
 
+  # Sound handling
+  flutter_sound: ^6.3.1+1
+
+  # Permission hanlder
+  permission_handler: ^5.0.1+1
+
+  http: ^0.12.2
+
+  path_provider: ^1.6.22
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
