--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,17 +101,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: SF-Pro-Display
+      fonts:
+        - asset: assets/SF-Pro-Display-Regular.otf
+        - asset: assets/SF-Pro-Display-Medium.otf
+        - asset: assets/SF-Pro-Display-Semibold.otf
+        - asset: assets/SF-Pro-Display-Bold.otf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
